# ded-poc-v2

./: .gitignore  DEPLOYMENT.md  README.md
.github/workflows/: deploy.yml
backend/: __init__.py  deploy.sh  main.py  pyproject.toml  requirements.txt  settings.py  startup.py  test_forecast.py  web.config
backend/auth/: __init__.py  broker.py  fabric_rls.py  middleware.py  user_auth.py
backend/catalog/: __init__.py  db.py  models.py  upsert.py
backend/clients/: __init__.py  fabric.py
backend/routers/: __init__.py  agent_graph.py  auth.py  catalog.py  dbmeta.py  diagnostics_sqldb.py  fabric_auth.py  forecasting.py  introspect.py  sqldb.py  workspaces.py
backend/sql/: __init__.py  odbc.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  web.config
frontend-v2/: package-lock.json  package.json  tailwind.config.mjs
frontend-v2/src/app/: globals.css  layout.tsx  page.tsx
frontend-v2/src/components/chat/: ChatHeader.tsx  ChatInfoBanner.tsx  ChatInfoModal.tsx  (+7 more)
frontend-v2/src/styles/: design-tokens.css
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AccountIcon.tsx  AnimatedText.tsx  BeamsBackground.tsx  CatalogExplorer.tsx  CenterPane.tsx  Chart.tsx  ChatPanel.tsx  ContextChips.tsx  DataTable.tsx  FabricExplorer.tsx  Header.tsx  MentionDropdown.tsx  MessageArea.tsx  QueryProvider.tsx  ResizableLayout.tsx  ScrollTest.tsx  ScrollableContent.tsx  VegaChart.tsx  VegaChartWrapper.tsx
frontend/src/lib/: api.ts  types.ts  utils.ts
scripts/: bootstrap_login.py  smoke_test_api.py
(+20 files in other folders)
