[project]
name = "ded-poc"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.2.12",
    "langchain-openai>=0.1.21",
    "langgraph>=0.6.7",
    "msal>=1.33.0",
    "pandas>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.10.1",
    "pyodbc>=5.2.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "sqlmodel>=0.0.24",
    "typer>=0.17.4",
    "uvicorn[standard]>=0.35.0",
]
